# pfm-bottlenecks

./: .gitignore  2_1_policy_coherence_extraction_validation.ipynb  6_1_ad_hoc_funding_advocate_skeptic.ipynb  6_1ad_hoc_funding_extraction_validation.ipynb  README.md  bottleneck_context.py  bottleneck_definitions.py  bottleneck_schemas.py  challenge_classification.py  consts.py  databricks_runner.py  document_ingestion.py  evidence_extraction.py  evidence_reflection.py  evidence_summarization.py  evidence_validation.py  imports.py  models.py  pipeline.py  pipeline_runner.py  post_validation.py  prefilter.py  pyproject.toml  references.md  service.py  utils.py
agentic_extraction/: README.md  __init__.py  config.py  main.ipynb
agentic_extraction/agents/: __init__.py  arbitrator.py  causality_validator.py  classifier.py  pre_filter.py
agentic_extraction/core/: __init__.py  bottleneck_registry.py  models.py  pipeline.py
agentic_extraction/utils/: __init__.py
agents/: __init__.py  advocate.py  judge.py  models.py  skeptic.py
old_code/: README.md  azure_service.py  bottleneck_transform_load_dlt.ipynb  consts.py  data_extraction.ipynb  prompts.py  runner.ipynb
old_code/models/: base.py  extraction.py  registry.py  validation.py
pfm_bottlenecks/: bottleneck_definitions.py  consts.py  document_ingestion.py  evidence_extraction.py  evidence_reflection.py  evidence_summarization.py  evidence_validation.py  prefilter.py  service.py
structured_extraction/: README.md  config.py  main.ipynb  main.py
tests/: __init__.py  test_bottleneck_definitions.py
(+13 files in other folders)
